# pyo3_messanger

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  client.py  server.py
src/: client.rs  lib.rs  main.py  requirements.txt  server.rs
